--- a/templates/test.html
+++ b/templates/test.html
@@ -41,6 +41,11 @@
             cursor: pointer;
             
         }
+
+        button.delete{
+            background: red;
+        }
+
         button:hover{
             transition: background-color 0.5s ease;
             background-color:#89e373;
@@ -54,18 +59,27 @@
             align-items: center;
         }
         .screen{
-            width: 80px;
+            width: 800px;
             height: 100px;
             border: 2px solid black;
             background-color: black;
-            color: white;
+            color: red;
             margin-top: 20px;
             padding: 5px;
             display: flex;
             align-items: center;
             justify-content: center;
             margin-left: 10px;
+            font-size: 35px;
         }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* Align items to the start */
+            gap: 10px; /* Gap between buttons */
+        }
+
         @media(max-width: 787px){
             body{
                 flex-direction: column;
@@ -83,9 +97,12 @@
         </div>
     </div>
     <div class="screen"></div>
-    <button onclick="clearScreen()">Clear Screen</button>
+    <div class="button-container">
+        <button class="delete" onclick="deleteLastLetter()">X</button>
+        <button onclick="addSpace()">Space</button>
+        <button onclick="clearScreen()">Clear Screen</button>
 
-
+    </div>
     <script>
 
 function getCookie(name) {//////csrf fetch garxa cookies bata .
@@ -156,6 +173,17 @@ function getCookie(name) {//////csrf fetch garxa cookies bata .
             detectedWord = '';
             screen.innerText = '';
         }
+        function deleteLastLetter() {
+            let screen = document.querySelector('.screen');
+            detectedWord = detectedWord.slice(0, -1); // Remove the last character from the word
+            screen.innerText = detectedWord;
+        }
+        function addSpace() {
+            let screen = document.querySelector('.screen');
+            detectedWord += ' '; // Add a space to the word
+            screen.innerText = detectedWord;
+        }
+
 
 
         async function captureAndSendFrame() {
